welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:13: error: not found: value <
		case i < 3 => droite()
                       ^Poucet:15: error: not found: value >=
		case i >= 3 => gauche()
                       ^